fixing vertical align

--- a/widgets/blueprintsWizards/src/widget.css
+++ b/widgets/blueprintsWizards/src/widget.css
@@ -155,3 +155,8 @@
     display: flex;
     justify-content: space-between;
   }
+
+.DropDownVerticalAlign {
+  vertical-align: middle;
+
+}
